# surprise_ttt_repo

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
data/: sample_corpus.txt
docs/: math_notes.md
src/surprise_ttt/: cli.py  cli_adv.py  config.py  data.py  ema.py  gating.py  param_select.py  param_subset.py  retention_gate.py  runtime_defaults.py  sdp.py  stability.py  testing.py  tokenizer.py  train.py  ttt.py  ttt_adv.py  updater.py  utils.py
src/surprise_ttt/models/: toy_lm.py
tests/: test_amp_cpu_safe.py  test_ema.py  test_gate.py  test_microbatch_steps.py  test_quadratic_stability.py  test_retention_pull.py  test_sequence_drift.py  test_sequence_drift_model.py  test_subset_updates.py  test_updater_smoke.py
