[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surprise-ttt"
version = "0.1.0"
description = "Surprise-gated Test-Time Training (TTT) with anchored forgetting"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Maulud Sadiq"}]
dependencies = [
  "torch>=2.2",
  "numpy>=1.23",
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.7",
  "types-tqdm",
]

[project.scripts]
sttt = "surprise_ttt.cli:app"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","B","UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
